[tool.poetry]
name = "xoxo"
version = "0.1.0"
description = "a tiny, exploitable chatbot that can use tools"
authors = ["Eryk Mazuś <eryk.mazus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
